# bead

./: .envrc  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  __main__.py  add-git-info.py  add-git-info.sh  appveyor.yml  bead.sublime-project  build.py  ci  pyproject.toml  requirements.txt  tox.ini  tracelog.py
.github/workflows/: install-test.yml
bead/: archive.py  bead.py  box.py  conftest.py  exceptions.py  layouts.py  test.py  test_archive.py  test_box.py  test_workspace.py  workspace.py  ziparchive.py
bead/tech/: fs.py  persistence.py  test_fs.py  test_persistence.py  test_securehash.py  timestamp.py
bead_cli/: box.py  cmdparse.py  common.py  conftest.py  environment.py  git_info.py  input.py  main.py  test_basic_usage.py  test_box_commands.py  test_develop_command.py  test_feature_update_by_name.py  test_fixtures.py  test_input_commands.py  test_new_command.py  test_robot.py  test_save_command.py  test_status_command.py  test_web_command.py  test_xmeta.py  test_zap_command.py  workspace.py
bead_cli/web/: cluster.py  commands.py  sketch.py
dev/: ai  root  typecheck  vm  vms
doc/: usecases.md
tests/web/: test_graphviz.py
