[project]
name = "bead"
version = "0.8.1"
description = "Linked frozen computations"
authors = [{name = "Krisztián Fekete"}]
license = {text = "The Unlicense"}
requires-python = ">=3.10"
packages = [
    { include = "bead" },
    { include = "bead_cli" },
    { include = "tracelog.py" },
    { include = "tests" },
]
dependencies = [
    "appdirs",
    "attrs",
    "cached-property",
    "pip>=25.1.1",
]

[project.scripts]
bead = 'bead_cli.main:main'

[dependency-groups]
dev = [
    "pytest-cov",
    "flake8",
    "freezegun",
    "pytest",
    "mypy",
]

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"
