[project]
name = "bead"
version = "0.8.2"
description = "Linked frozen computations"
authors = [{name = "Krisztián Fekete"}]
license = {text = "The Unlicense"}
requires-python = ">=3.10"

dependencies = [
    "appdirs",
    "argcomplete>=3.6.2",
    "attrs",
    "cached-property",
    "pip>=25.1.1",
]

[project.urls]
Homepage = "https://bead.zip"
Repository = "https://github.com/codedthinking/bead"
"Bug Tracker" = "https://github.com/codedthinking/bead/issues"
Documentation = "https://bead.zip"

[project.scripts]
bead = 'bead_cli.main:main'

[dependency-groups]
dev = [
    "pytest-cov",
    "flake8",
    "freezegun",
    "pytest",
    "mypy",
    "pytype>=2024.10.11",
]

[tool.pyright]
reportUnusedCallResult = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bead", "bead.tech", "bead_cli", "bead_cli.web", "tests", "tests.web"]
py-modules = ["tracelog"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
